--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 					<section>
 						Tujuan dari desain algoritma Rabbit adalah untuk mengambil keuntungan dari sifat <em>real-valued chaotic maps</em> dan tetap menciptakan kriptografi yang aman dan optimal dalam bentuk diskrit.
 					</section>
-
+ 
 					<section>
 						Desain algoritma Rabbit dimulai dengan membuat <em>chaotic system</em> dari <em>non-linear maps</em> yang berpasangan (Adwitya, 2006).
 					</section>
@@ -145,7 +145,7 @@
 					</section>
 
 					<section>
-						<img src="lib/img/_1.png" alt="">
+						<img src="lib/img/gambar2.4.png" alt="">
 					</section>
 
 					<section>
