--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 					</section>
 
 					<section>
-						<img src="lib/img/gambar2.4.png" alt="">
+						<img src="lib/img/PNG/_1.png" alt="">
 					</section>
 
 					<section>
